Fixed Contrast Error

--- a/css/global.css
+++ b/css/global.css
@@ -180,11 +180,11 @@ nav ul a {
   text-transform: uppercase;
   text-decoration: none;
   color: var(--color-dark);
-  transition: color 0.1s ease;
+  transition: border-bottom 0.1s ease, border-left 0.1s ease;
 }
 
 a[aria-current=page], a:not(.button):hover {
-  color: var(--color-primary-shade);
+  border-bottom: 4px solid var(--color-primary);
 }
 
 @media (max-width: 768px) {
@@ -292,7 +292,7 @@ footer p:first-of-type {
 
 .testimonial {
   max-width: 930px;
-  margin: 0 1em;
+  margin: 0 auto;
   padding: 3rem 0;
   display: flex;
   flex-wrap: wrap;
@@ -308,6 +308,11 @@ footer p:first-of-type {
   margin-top: 1em;
 }
 
+@media (max-width: 768px) {
+  .testimonial {
+    margin: 0 1em;
+  }
+}
 .sidebar {
   visibility: hidden;
   position: fixed;
